footer z-index fix, background fix

--- a/components/layouts/footer/footer.module.css
+++ b/components/layouts/footer/footer.module.css
@@ -10,4 +10,5 @@
   position: sticky;
   left: 0;
   bottom: 0;
+  z-index: 1000;
 }
